manifests/drone/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone
  namespace: drone
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - drone.linus.solutions
      secretName: drone-linus-solutions-tls
  rules:
    - host: drone.linus.solutions
      http:
        paths:
          - path: /multiplayer/socket.io
            pathType: Prefix
            backend:
              service:
                name: multiplayer
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drone
                port:
                  number: 80
